--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 - make -C elixir
 before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
+  - mix local.hex --force
   - MIX_ENV=test mix deps.get
 script:
   - MIX_ENV=test mix test
